# libgcm

./: CHANGELOG.md  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/terra/crypto/cipher/: gcm.h  ghash.h
src/: CMakeLists.txt  gcm.cpp  gcm_utilities.h  ghash.cpp
test/: CMakeLists.txt
test/test_aes_gcm/: CMakeLists.txt  test_aes_gcm.cpp
